# kalax

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  pyproject.toml  python_api.md  tsfresh_features.yaml
.github/workflows/: build_wheel.yaml
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  project_overview.md  recent_changes_status.md  serena_tools_guide.md  suggested_commands.md  task_completion_checklist.md  test_utilities.md
core/: Cargo.toml
core/src/: extractor.rs  features.rs  lib.rs  test_utils.rs
core/src/features/: common.rs  minimal.rs
plan/: dev_plan.md
pybind/: Cargo.toml
pybind/examples/: simple.py
pybind/src/: lib.rs
src/: dataframe_utils.rs  extractor.rs  features.rs  lib.rs  polars.rs
src/features/: common.rs  minimal.rs  statistical.rs
src/features/minimal/: functional.rs  oop.rs
