[package]
name = "kalax"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.17.1"
polars = { version = "0.52.0", default-features = false, features = [
    "lazy",
    "timezones", # temporarily add timezones feature to avoid issue https://github.com/pola-rs/polars/issues/25148
] }

[dev-dependencies]
polars = { version = "0.52.0", default-features = false, features = [
    "csv",
] }
