[package]
name = "kalax"
version = "0.1.1"
edition = "2024"
authors = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }

[dependencies]
rayon = "1.11.0"

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serdeio = { version = "0.5.0", features = ["csv"] }
