[package]
name = "kalax-pybind"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kalax"
crate-type = ["cdylib"]

[dependencies]
kalax-core = { version = "0.1.0", path = "../core" }
numpy = "0.27.1"
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3-py312"] }
