[package]
name = "kalax-pybind"
version = "0.1.1"
edition = "2024"
authors = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license-file = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kalax"
crate-type = ["cdylib"]

[dependencies]
kalax = { version = "0.1.0", path = "../core" }
numpy = "0.27.1"
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3-py312"] }
